# email_validator

./: Cargo.toml  Containerfile  HOW_TO_CALL.md  Procfile  README.md  ROADMAP.md  openapi.json  tests.requests.http
.github/workflows/: main.yml  tags.yml
src/: main.rs  misc.rs  oas.rs  oauth2.rs  schemas.rs
