[package]
name = "email_validation_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
check-if-email-exists = "0.8.25"
actix-web = "3"
env_logger = "0.9.0"
log = "0.4.14"
serde = { version = "1", features = ["derive"]}
gethostname = "0.2.2"
# paperclip = { git = "https://github.com/paperclip-rs/paperclip.git", branch = "master", features = ["actix", "v3"]}
paperclip = { git = "file:///Users/maxim/work/paperclip", rev = "6a20ad4", features = ["actix", "v3"]}
indexmap = "1.8.0"
serde_json = "1.0.76"
serde_derive = "1.0.136"
strum = { version = "0.23.0", features = ["derive"] }