[package]
name = "email_validation_api"
version = "0.4.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
check-if-email-exists = "0.9.0"
actix-web = { version = "4.2.1", features = ["openssl"] }
actix-cors = "0.6.2"
env_logger = "0.9.0"
log = "0.4.14"
serde = { version = "1", features = ["derive"]}
gethostname = "0.2.2"
paperclip = { git = "https://github.com/paperclip-rs/paperclip.git", branch = "master", features = ["actix4", "v3"]}
indexmap = "1.8.0"
serde_json = "1.0.76"
serde_derive = "1.0.136"
openssl = "0.10.41"
